# vault-wolf

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  TASKS.md
IBTwsApi/: CMakeLists.txt
cppclient/: CMakeLists.txt
cppclient/client/: EClientUtils.h
cppclient/client/protobufUnix/: ComboLeg.pb.h  DeltaNeutralContract.pb.cc  DeltaNeutralContract.pb.h  ErrorMessage.pb.cc  ErrorMessage.pb.h  ExecutionDetailsEnd.pb.cc  ExecutionFilter.pb.cc  ExecutionFilter.pb.h  ExecutionRequest.pb.h  GlobalCancelRequest.pb.cc  GlobalCancelRequest.pb.h  OpenOrder.pb.cc  Order.pb.cc  Order.pb.h  OrderCancel.pb.h  OrderCondition.pb.cc  OrderCondition.pb.h  OrderStatus.pb.cc  OrderStatus.pb.h
cppclient/cmake/: twsclientConfig.cmake.in
cppclient/protos/: CancelOrderRequest.proto  ComboLeg.proto  Contract.proto  DeltaNeutralContract.proto  ErrorMessage.proto  ExecutionDetails.proto  ExecutionDetailsEnd.proto  ExecutionFilter.proto  GlobalCancelRequest.proto  OpenOrdersEnd.proto  OrderAllocation.proto  OrderCancel.proto  OrderCondition.proto  OrderState.proto  PlaceOrderRequest.proto  SoftDollarTier.proto
ibtws-cpp/: CMakeLists.txt  bid64_stub.c
ibtws-cpp/client/protobufUnix/: CancelOrderRequest.pb.cc  CancelOrderRequest.pb.h  ComboLeg.pb.cc  Contract.pb.cc  Contract.pb.h  Execution.pb.cc  Execution.pb.h  ExecutionDetails.pb.cc  ExecutionDetails.pb.h  ExecutionDetailsEnd.pb.h  ExecutionRequest.pb.cc  OpenOrder.pb.h  OpenOrdersEnd.pb.cc  OpenOrdersEnd.pb.h  OrderAllocation.pb.cc  OrderAllocation.pb.h  OrderCancel.pb.cc  OrderState.pb.cc  OrderState.pb.h  PlaceOrderRequest.pb.cc  PlaceOrderRequest.pb.h  SoftDollarTier.pb.cc  SoftDollarTier.pb.h
ibtws-cpp/cmake/: twsclient.pc.in
ibtws-cpp/protos/: Execution.proto  ExecutionRequest.proto  OpenOrder.proto  Order.proto  OrderStatus.proto
ibtws-rust/: Cargo.toml
ibtws-rust/src/: decoder.rs  errors.rs  lib.rs  proto_decode.rs  protocol.rs  wrapper.rs
ibtws-rust/src/models/: bar.rs  common.rs  contract.rs  enums.rs  execution.rs  mod.rs  order.rs
ibtws-rust/tests/: integration_test.rs
include/common/: data_types.h  json_helper.h
include/httplib/: httplib.h
include/ibwrapper/: vault_account_summary_tags.h  vault_available_algo_params.h  vault_contracts.h  vault_ewrapper.h  vault_fa_methods.h  vault_orders.h  vault_scanner_subscription.h  vault_utils.h
include/manager/: vault_manager.h
include/web/: web_server.h
src/: main.cpp  main.rs  main_server.cpp  manager.rs  models.rs  vault_available_algo_params.cpp  vault_contracts.cpp  vault_scanner_subscription.cpp  vault_utils.cpp  web.rs
src/ibwrapper/: vault_account_summary_tags.cpp  vault_ewrapper.cpp  vault_orders.cpp  vault_utils.cpp
src/manager/: vault_manager.cpp
src/web/: web_server.cpp
thirds/: .gitignore
vault-wolf-ibapi/: Cargo.toml
vault-wolf-ibapi/src/: client.rs  encoder.rs  errors.rs  lib.rs  proto_encode.rs  protocol.rs  reader.rs  transport.rs
vault-wolf-ibapi/src/models/: contract.rs  enums.rs  execution.rs  market_data.rs  mod.rs  order.rs  scanner.rs
vault-wolf-ibapi/tests/: integration_test.rs
