[package]
name = "vault-wolf"
version = "1.0.0"
edition = "2021"
description = "VaultWolf Trading API Server - Interactive Brokers Integration"

[dependencies]
# IB TWS API - replaces C++ IBTwsApi + IntelRDFPMathLib
ibapi = { version = "2.7", default-features = false, features = ["sync"] }

# Web framework - replaces cpp-httplib
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization - replaces manual JSON helpers
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = { version = "3", features = ["termination"] }
